# rusty-links

./: .dockerignore  .env.example  .env.saas  .env.saas.example  .env.standalone  .env.standalone.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.dev  Dockerfile.saas  FULLSTACK_CONVERSION.md  FULLSTACK_STATUS.md  Justfile  LICENSE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  build.rs  compose.dev.yml  compose.yml  input.css  jetbrain.json  justfile  package-lock.json  package.json  stylelint.config.mjs  tailwind.config.js  tailwind.css  test_config.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.forgejo/workflows/: build-oci-image.yml  check.yml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-and-push-image.yml  build-oci-image.yml  build.yml  docker-publish.yml  test.yml
.github/workflows-disabled/: test.yml
.scripts/: config-devcontainer.sh
assets/: high-contrast-init.js  index.html  saas-refresh.js  style.css  tailwind.css
docs/: API.md  BUILD_BLUEPRINT.md  DATABASE.md  DEPLOYMENT.md  DOCKER.md  IMPLEMENTATION_01_02_FOUNDATION_AUTH.md  IMPLEMENTATION_07_UI_COMPLETE.md  IMPLEMENTATION_07_UI_STEPS_36_45.md  IMPLEMENTATION_08_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PARTS_SUMMARY.md  LAUNCH_CHECKLIST.md  README.md  RELEASE.md  RELEASE_TEMPLATE.md  SECURITY.md  SPECIFICATION.md  SSO_IMPLEMENTATION.md  STEP_36_ADD_LINK_FLOW.md  STEP_5_SUMMARY.md  STEP_7_SESSION_MANAGEMENT.md  STEP_7_SUMMARY.md  STEP_8_AUTHENTICATION_API.md  STEP_9_DEPLOYMENT.md  TESTING.md  UI_IMPLEMENTATION_INDEX.md  UI_IMPLEMENTATION_README.md  UPGRADING.md
docs/prompts/: IMPLEMENTATION_03_THRU_08_COMPLETE.md  IMPLEMENTATION_PARTS_SUMMARY.md  PART1_FOUNDATION.md  PART2_AUTHENTICATION.md  PART3_LINK_MANAGEMENT.md  PART4_CATEGORIZATION.md  PART5_METADATA.md  PART6_INTEGRATIONS.md  PART7_BACKGROUND.md  PART8_SEARCH_FILTER.md  PART9_POLISH.md  README.md  STEP_3_TESTING.md  STEP_4_CONNECTION_POOL.md  STEP_5_ERROR_HANDLING.md  STEP_6_SUMMARY.md  STEP_6_USER_MODEL.md
docs/superpowers/plans/: 2026-04-01-per-user-dev-instances.md  2026-04-02-fix-getting-started.md  2026-04-02-high-contrast-mode.md
docs/superpowers/specs/: 2026-04-01-per-user-dev-instances-design.md  2026-04-02-high-contrast-mode-design.md
examples/: Caddyfile  compose.yml  nginx.conf
migrations/: 20250101000001_initial_schema.sql  20250101000002_seed_data.sql  20250101000003_sessions_table.sql  20250101000004_add_failure_count.sql  20250101000005_add_scheduler_fields.sql  20250101000006_add_user_name.sql  20250101000007_fix_links_schema.sql  20250101000008_jwt_auth.sql  20260417000009_add_sso_fields.sql  20260417000010_create_rp_sessions.sql  20260417000011_create_user_sessions.sql  20260427000012_add_auth_via_oidc_to_user_sessions.sql
oci-build/: Dockerfile  build.nu  buildah-wrapper.nu  config.saas.yml  config.yml  setup.nu
scripts/: integration-test.sh  pre-commit
src/: build_info.rs  config.rs  error.rs  lib.rs  main.rs  maintenance.html  security.rs
src/api/: admin.rs  auth.rs  categories.rs  health.rs  languages.rs  licenses.rs  links.rs  mod.rs  scrape.rs  tags.rs  webhook.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  oidc_rs.rs  saas_auth.rs  session.rs
src/auth/oidc_rp/: jit.rs  mod.rs
src/github/: mod.rs
src/models/: category.rs  language.rs  license.rs  link.rs  mod.rs  tag.rs  user.rs
src/scheduler/: mod.rs
src/scraper/: mod.rs
src/server_functions/: auth.rs  links.rs  mod.rs
src/ui/: api_client.rs  app.rs  auth_state.rs  http.rs  mod.rs  performance.rs  style.css  utils.rs
src/ui/components/: add_link_button.rs  category_select.rs  dropdown_arrow.rs  empty_state.rs  footer.rs  high_contrast_toggle.rs  language_select.rs  license_select.rs  loading.rs  metadata_badges.rs  mod.rs  navbar.rs  pagination.rs  screen_reader.rs  skip_link.rs  tag_select.rs  toast.rs  virtual_scroll.rs
src/ui/components/error/: message.rs  mod.rs
src/ui/components/loading/: mod.rs  progress.rs  spinner.rs
src/ui/components/management/: add_category_input.rs  add_item_input.rs  category_tree_node.rs  flat_list_item.rs  inline_edit.rs  mod.rs
src/ui/components/modal/: add_link_dialog.rs  confirm_dialog.rs  link_details_modal.rs  mod.rs  modal_base.rs  modal_section.rs
src/ui/components/search_filter/: filter_dropdown.rs  filters_container.rs  mod.rs  search_bar.rs
src/ui/components/table/: links_table.rs  mod.rs  table_header.rs
src/ui/pages/: add_link.rs  categories.rs  edit_link.rs  languages.rs  licenses.rs  links.rs  links_list.rs  login.rs  mod.rs  setup.rs  tags.rs
static/: index.html
tests/: integration_example.rs  route_surface.rs
tests/common/: mod.rs
