[package]
name = "rusty-links"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-web = { version = "0.7.1", optional = true }
axum = { version = "0.8.7", features = ["tokio"], optional = true }
axum-extra = { version = "0.12.2", features = ["cookie"], optional = true }
tower = { version = "0.5.2", features = ["util"], optional = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"], optional = true }

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "chrono"], optional = true }

# Async runtime
tokio = { version = "1.48.0", features = ["full"], optional = true }
futures = "0.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# HTTP client (for frontend API calls and scraping)
reqwest = { version = "0.12.24", features = ["json", "cookies"] }

# HTML parsing
scraper = "0.24.0"

# Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }

# Utilities
uuid = { version = "1.18.1", features = ["serde", "v4", "js"] }
url = "2.5.7"
urlencoding = "2.1"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"

# Password hashing
argon2 = "0.5.3"

# Session management
rand = "0.9.2"
hex = "0.4.3"

# WASM compatibility - must be in main dependencies to propagate to all transitive deps
getrandom = "0.3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Navigator",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }

[features]
default = []
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:sqlx",
]
web = [
    "dioxus/web",
]

[dev-dependencies]
